--- a/lectures/sem04_1_features.ipynb
+++ b/lectures/sem04_1_features.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "['comp.graphics', 'sci.med']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "'From: dyer@spdcc.com (Steve Dyer)\\nSubject: Re: Analgesics with Diuretics\\nOrganization: S.P. Dyer Computer Consulting, Cambridge MA\\n\\nIn article <ofk=lve00WB2AvUktO@andrew.cmu.edu> Lawrence Curcio <lc2b+@andrew.cmu.edu> writes:\\n>I sometimes see OTC preparations for muscle aches/back aches that\\n>combine aspirin with a diuretic.\\n\\nYou certainly do not see OTC preparations advertised as such.\\nThe only such ridiculous concoctions are nostrums for premenstrual\\nsyndrome, ostensibly to treat headache and \"bloating\" simultaneously.\\nThey\\'re worthless.\\n\\n>The idea seems to be to reduce\\n>inflammation by getting rid of fluid. Does this actually work? \\n\\nThat\\'s not the idea, and no, they don\\'t work.\\n\\n-- \\nSteve Dyer\\ndyer@ursa-major.spdcc.com aka {ima,harvard,rayssd,linus,m2c}!spdcc!dyer\\n'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "'sci.med'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "29227"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
        "\twith 43 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
    "source": [
     "### TD-IDF\n",
     "\n",
-    "Another way of struckturing data for this scenario is (TF-IDF)[https://en.wikipedia.org/wiki/Tf–idf](__T__erm __F__requency–__I__nverse __D__ocument __F__requency). \n",
+    "Another way of struckturing data for this scenario is [TF-IDF](https://en.wikipedia.org/wiki/Tf–idf) (**T**erm **F**requency–**I**nverse **D**ocument **F**requency). \n",
     "\n",
     "- $D$ is the collection of texts, where $t$ is the frequency of a unique word in text $d \\in D$\n",
     "- TermFrequency - proportion of the word in text $\\large{tf(t, d) = \\frac{n_{td}}{\\sum n_{td}}}$\n",
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
        "29227"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
        "\twith 43 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -399,11 +399,391 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Stemming and Lemmatization \n",
+    "\n",
+    "- [Stemming](https://en.wikipedia.org/wiki/Stemming) - For the skiing technique, see Stem (skiing). For the climbing technique, see Glossary of climbing terms § stem.\n",
+    "In linguistic morphology and information retrieval, stemming is the process of reducing inflected (or sometimes derived) words to their word stem, base or root form—generally a written word form.\n",
+    "\n",
+    "- [Lemmatization](https://en.wikipedia.org/wiki/Lemmatisation) - is the process of grouping together the inflected forms of a word so they can be analysed as a single item, identified by the word's lemma, or dictionary form."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Stemming"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# importing a stemming lib \n",
+    "import nltk\n",
+    "stemmer = nltk.stem.snowball.EnglishStemmer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vizual\n"
+     ]
+    }
+   ],
+   "source": [
+    "#test\n",
+    "\n",
+    "print(stemmer.stem('vizuallization'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's try **stemming** for the preprocessing of thr text before **vectorization**. We will use **td-idf** for vectorization, because it has shows the best results before. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a4032fc9cead4f8b867edc83fc0b2afd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1570 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6cb6624573744d22b5e33fbd308a9c91",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/393 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def stem_text(text, stemmer):\n",
+    "    tokens = text.split()\n",
+    "    return ' '.join(map(lambda w: stemmer.stem(w), tokens))\n",
+    "\n",
+    "stemmed_texts_train = []\n",
+    "for t in tqdm(texts_train):\n",
+    "    stemmed_texts_train.append(stem_text(t, stemmer))\n",
+    "    \n",
+    "stemmed_texts_test = []\n",
+    "for t in tqdm(texts_test):\n",
+    "    stemmed_texts_test.append(stem_text(t, stemmer))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comparing the initial and stemmed text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "From: black@sybase.com (Chris Black)\n",
+      "Subject: cystic breast disease\n",
+      "Organization: Sybase, Inc.\n",
+      "Lines: 18\n",
+      "\n",
+      "My mom has just been diagnosed with cystic breast disease -- a big\n",
+      "relief, as it was a lump that could have been cancer.  Her doctor says\n",
+      "she should go off caffeine and chocolate for 6 months, as well as\n",
+      "stopping the estrogen she's been taking for menopause-related reasons.\n",
+      "She's not thrilled with this, I think especially because she just gave\n",
+      "up cigarettes -- soon she won't have any pleasures left!  Now, I thought\n",
+      "I'd heard that cystic breasts were common and not really a health risk.\n",
+      "Is this accurate?  If so, why is she being told to make various\n",
+      "sacrifices to treat something that's not that big of a deal?\n",
+      "\n",
+      "Thanks for any information.\n",
+      "\n",
+      "-- Chris\n",
+      "\n",
+      "-- \n",
+      "black@sybase.com\n",
+      "\n",
+      "Note:  My mailer tends to garble subject lines.  \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(texts_train[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "from: black@sybase.com (chris black) subject: cystic breast diseas organization: sybase, inc. lines: 18 my mom has just been diagnos with cystic breast diseas -- a big relief, as it was a lump that could have been cancer. her doctor say she should go off caffein and chocol for 6 months, as well as stop the estrogen she been take for menopause-rel reasons. she not thrill with this, i think especi becaus she just gave up cigarett -- soon she won't have ani pleasur left! now, i thought i'd heard that cystic breast were common and not realli a health risk. is this accurate? if so, whi is she be told to make various sacrific to treat someth that not that big of a deal? thank for ani information. -- chris -- black@sybase.com note: my mailer tend to garbl subject lines.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(stemmed_texts_train[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27715"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectorizer = TfidfVectorizer(encoding='utf8')\n",
+    "_ = vectorizer.fit(stemmed_texts_train)\n",
+    "len(vectorizer.vocabulary_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = vectorizer.transform(stemmed_texts_train)\n",
+    "X_test = vectorizer.transform(stemmed_texts_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best alpha = 129.1550\n",
+      "Train accuracy = 1.0000\n",
+      "Test accuracy = 0.9924\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = train_model(X_train, y_train)\n",
+    "\n",
+    "print(\"Train accuracy = %.4f\" % accuracy_score(y_train, model.predict(X_train)))\n",
+    "print(\"Test accuracy = %.4f\" % accuracy_score(y_test, model.predict(X_test)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Lemmatization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "07de20fcdc0f46de8c4e19d20a8f5c1b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1570 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "65bfdfffb234489e87315082124d57bb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/393 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from nltk.stem import WordNetLemmatizer\n",
+    "\n",
+    "lemmatizer = WordNetLemmatizer()\n",
+    "\n",
+    "def lemmatize_text(text, stemmer):\n",
+    "    tokens = text.split()\n",
+    "    return ' '.join(map(lambda w: lemmatizer.lemmatize(w), tokens))\n",
+    "\n",
+    "lemmatized_texts_train = []\n",
+    "for t in tqdm(texts_train):\n",
+    "    lemmatized_texts_train.append(lemmatize_text(t, stemmer))\n",
+    "    \n",
+    "lemmatized_texts_test = []\n",
+    "for t in tqdm(texts_test):\n",
+    "    lemmatized_texts_test.append(lemmatize_text(t, stemmer))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "From: black@sybase.com (Chris Black) Subject: cystic breast disease Organization: Sybase, Inc. Lines: 18 My mom ha just been diagnosed with cystic breast disease -- a big relief, a it wa a lump that could have been cancer. Her doctor say she should go off caffeine and chocolate for 6 months, a well a stopping the estrogen she's been taking for menopause-related reasons. She's not thrilled with this, I think especially because she just gave up cigarette -- soon she won't have any pleasure left! Now, I thought I'd heard that cystic breast were common and not really a health risk. Is this accurate? If so, why is she being told to make various sacrifice to treat something that's not that big of a deal? Thanks for any information. -- Chris -- black@sybase.com Note: My mailer tends to garble subject lines.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lemmatized_texts_train[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "from: black@sybase.com (chris black) subject: cystic breast diseas organization: sybase, inc. lines: 18 my mom has just been diagnos with cystic breast diseas -- a big relief, as it was a lump that could have been cancer. her doctor say she should go off caffein and chocol for 6 months, as well as stop the estrogen she been take for menopause-rel reasons. she not thrill with this, i think especi becaus she just gave up cigarett -- soon she won't have ani pleasur left! now, i thought i'd heard that cystic breast were common and not realli a health risk. is this accurate? if so, whi is she be told to make various sacrific to treat someth that not that big of a deal? thank for ani information. -- chris -- black@sybase.com note: my mailer tend to garbl subject lines.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(stemmed_texts_train[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28717"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectorizer = TfidfVectorizer(encoding='utf8')\n",
+    "_ = vectorizer.fit(lemmatized_texts_train)\n",
+    "len(vectorizer.vocabulary_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = vectorizer.transform(lemmatized_texts_train)\n",
+    "X_test = vectorizer.transform(lemmatized_texts_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best alpha = 359.3814\n",
+      "Train accuracy = 1.0000\n",
+      "Test accuracy = 0.9873\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = train_model(X_train, y_train)\n",
+    "\n",
+    "print(\"Train accuracy = %.4f\" % accuracy_score(y_train, model.predict(X_train)))\n",
+    "print(\"Test accuracy = %.4f\" % accuracy_score(y_test, model.predict(X_test)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "\n",
+    "- BAG-of-WORDS       Test accuracy = 0.9720 \n",
+    "- TD-IDF             Test accuracy = 0.9873\n",
+    "\n",
+    "We can see that td-idf has shown to be more accurate, this can be contributed to the nature of the model, which allows us to see the **more significant** words. \n",
+    "\n",
+    "\n",
+    "Next we've used two approaches to the text preprocessing with the following results: \n",
+    "\n",
+    "- Lemmatization     Test accuracy = 0.9924\n",
+    "- Stemming          Test accuracy = 0.9873"
+   ]
   }
  ],
  "metadata": {
